--- a/public_html/home.css
+++ b/public_html/home.css
@@ -21,26 +21,38 @@ body{
     color: rgb(54, 54, 165);
 }
 
+#ostaa{
+    padding-left: 20px;
+    padding-top: 100px;
+}
+
 #options{
     width: 50vw;
     height: 80vh;
     background-color: #dfffc9;
+    border: solid 2px black;
+
 }
 
 #itemview{
     width: 50vw;
     height: 80vh;
     background-color: #dfffc9;
+    border: solid 2px black;
 }
 
 #optionsh1{
-    font-size: 20px;
+    font-size: 25px;
     margin-bottom: 70px;
-    margin-left: 20px;
+    padding-left: 20px;
+    padding-top: 30px;
 }
 
-button{
+
+form input, button{
     margin-top: 50px;
+    margin-left: 20px;
+    font-size: 20px;
 }
 
 #content{
